fix/RadioButtonGroup: fixed spacing & height for large size button

--- a/src/components/app/radioButtonGroup/style.css
+++ b/src/components/app/radioButtonGroup/style.css
@@ -7,6 +7,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
+  line-height: 140%;
   letter-spacing: 1px;
   border-radius: 8px !important;
   padding: 6px 20px;
@@ -27,7 +28,7 @@
 }
 
 .button-large {
-  height: 110px !important;
+  height: 66px !important;
   width: 240px;
   padding: 24px 40px 24px 16px;
   overflow-wrap: anywhere;
